feat: Implement Register endpoint.

--- a/chat-backend-app/.env
+++ b/chat-backend-app/.env
@@ -1,2 +1,4 @@
 ENV=DEVELOPMENT
 DATABASE=DATABASE=mongodb+srv://mistertandon:"0291moJI**"@clustera.nxyjw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+SALT=sdfghufjn67r52345ggdwe6qf
+SECRET=hewf847rt092785thgeryf75r3r432yrtg4236t
