--- a/chat-backend-app/package.json
+++ b/chat-backend-app/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "jwt-then": "^1.0.1",
     "mongoose": "^6.1.7"
   },
   "devDependencies": {
