--- a/chat-backend-app/package.json
+++ b/chat-backend-app/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.1",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "js-sha256": "^0.9.0",
     "jwt-then": "^1.0.1",
     "mongoose": "^6.1.7"
   },
