--- a/chat-backend-app/package.json
+++ b/chat-backend-app/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.2",
     "js-sha256": "^0.9.0",
     "jwt-then": "^1.0.1",
-    "mongoose": "^6.1.7"
+    "mongoose": "^6.1.7",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
